--- a/index.html
+++ b/index.html
@@ -12,6 +12,58 @@
     <link href="https://fonts.googleapis.com/css2?family=Asap:wght@700&family=Inconsolata&family=Maven+Pro&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <section id="intro">
+        <div id="info">
+            <header>
+                <div>
+                    <img src="/assets/martina-santos.png" alt="Perfil de Martina Santos">
+                </div>
+
+                <div>
+                    <span>Hello World! Meu nome é <span>Martina Santos</span> e sou</span>
+                    <h1>Desenvolvedora Fullstack</h1>
+                    <p>
+                        Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.
+                    </p>
+                </div>
+            </header>
+
+            <div class="tags">
+                <div class="tag">
+                    <img src="assets/icons/GitHub.svg" alt="icone GitHub">
+                    <span>Github</span>
+                </div>
+
+                <div class="tag">
+                    <img src="assets/icons/HTML.svg" alt="icone HTML">
+                    <span>HTML</span>
+                </div>
+
+                <div class="tag">
+                    <img src="assets/icons/CSS.svg" alt="icone GitHub">
+                    <span>CSS</span>
+                </div>
+
+                <div class="tag">
+                    <img src="assets/icons/JavaScript.svg" alt="icone GitHub">
+                    <span>JavaScript</span>
+                </div>
+
+                <div class="tag">
+                    <img src="assets/icons/React.svg" alt="icone GitHub">
+                    <span>React</span>
+                </div>
+
+                <div class="tag">
+                    <img src="assets/icons/Node.js.svg" alt="icone GitHub">
+                    <span>Node.js</span>
+                </div>
+            </div>
+        </div>
+
+        <div>
+            <img src="assets/icons/CaretDoubleDown.svg" alt="Icone seta para baixo">
+        </div>
+    </section>
 </body>
 </html>
