--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section id="intro">
         <div id="info">
             <header>
-                <div>
+                <div class="avatar">
                     <img src="/assets/martina-santos.png" alt="Perfil de Martina Santos">
                 </div>
 
@@ -23,7 +23,8 @@
                     <span>Hello World! Meu nome é <span>Martina Santos</span> e sou</span>
                     <h1>Desenvolvedora Fullstack</h1>
                     <p>
-                        Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.
+                        Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da <br>
+                        minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.
                     </p>
                 </div>
             </header>
@@ -61,7 +62,7 @@
             </div>
         </div>
 
-        <div>
+        <div class="caretdown">
             <img src="assets/icons/CaretDoubleDown.svg" alt="Icone seta para baixo">
         </div>
     </section>
