Estruturando a seção services

--- a/index.html
+++ b/index.html
@@ -136,5 +136,36 @@
 
         </div>
     </section>
+
+    <section id="services">
+        <span>Meus serviços</span>
+        <h2>Como posso ajudar o seu negócio</h2>
+
+        <div class="cards">
+            <a href="#">
+                <figure class="card">
+                    <img src="assets/icons/Devices.svg" alt="Icone de computador">
+                    <h3>Websites e Aplicativos</h3>
+                    <p>Desenvolvimento de interfaces</p>
+                </figure>
+            </a>
+
+            <a href="#">
+                <figure class="card">
+                    <img src="assets/icons/HardDrives.svg" alt="Icone de computador">
+                    <h3>Websites e Aplicativos</h3>
+                    <p>Desenvolvimento de interfaces</p>
+                </figure>
+            </a>
+
+            <a href="#">
+                <figure class="card">
+                    <img src="assets/icons/Infinity.svg" alt="Icone de computador">
+                    <h3>Websites e Aplicativos</h3>
+                    <p>Desenvolvimento de interfaces</p>
+                </figure>
+            </a>
+        </div>
+    </section>
 </body>
 </html>
