Estilizando a seção services

--- a/index.html
+++ b/index.html
@@ -138,33 +138,31 @@
     </section>
 
     <section id="services">
-        <span>Meus serviços</span>
-        <h2>Como posso ajudar o seu negócio</h2>
+        <header>
+            <span>Meus serviços</span>
+            <h2>Como posso ajudar o seu negócio</h2>
+        </header>
+
 
         <div class="cards">
-            <a href="#">
-                <figure class="card">
-                    <img src="assets/icons/Devices.svg" alt="Icone de computador">
-                    <h3>Websites e Aplicativos</h3>
-                    <p>Desenvolvimento de interfaces</p>
-                </figure>
-            </a>
+            <figure class="card">
+                <img src="assets/icons/Devices.svg" alt="Icone de computador">
+                <h3>Websites e Aplicativos</h3>
+                <p>Desenvolvimento de interfaces</p>
+            </figure>
 
-            <a href="#">
-                <figure class="card">
-                    <img src="assets/icons/HardDrives.svg" alt="Icone de computador">
-                    <h3>Websites e Aplicativos</h3>
-                    <p>Desenvolvimento de interfaces</p>
-                </figure>
-            </a>
+            <figure class="card">
+                <img src="assets/icons/HardDrives.svg" alt="Icone de computador">
+                <h3>API e banco de dados</h3>
+                <p>Criação de serviços do sistema</p>
+            </figure>
 
-            <a href="#">
-                <figure class="card">
-                    <img src="assets/icons/Infinity.svg" alt="Icone de computador">
-                    <h3>Websites e Aplicativos</h3>
-                    <p>Desenvolvimento de interfaces</p>
-                </figure>
-            </a>
+
+            <figure class="card">
+                <img src="assets/icons/Infinity.svg" alt="Icone de computador">
+                <h3>DevOps</h3>
+                <p>Gestão e infraestrutura da aplicação</p>
+            </figure>
         </div>
     </section>
 </body>
