--- a/index.html
+++ b/index.html
@@ -165,5 +165,49 @@
             </figure>
         </div>
     </section>
+
+    <section id="contact">
+        <header>
+            <span>Contato</span>
+            <h2>Gostou do meu trabalho?</h2>
+            <p>
+                Entre em contato ou acompanhe as minhas redes sociais!
+            </p>
+        </header>
+
+        <div class="links">
+            <a href="#">
+                <figure class="link">
+                    <img src="assets/icons/LinkedinLogo.svg" alt="Logo Linkedin">
+                    <p>Linkedin</p>
+                    <img src="assets/icons/ArrowUpRight.svg" alt="Icone seta">
+                </figure>
+            </a>
+
+            <a href="#">
+                <figure class="link">
+                    <img src="assets/icons/InstagramLogo.svg" alt="Logo Instagram">
+                    <p>Instagram</p>
+                    <img src="assets/icons/ArrowUpRight.svg" alt="Icone seta">
+                </figure>
+            </a>
+
+            <a href="#">
+                <figure class="link">
+                    <img src="assets/icons/GithubLogo.svg" alt="Logo Github">
+                    <p>Linkedin</p>
+                    <img src="assets/icons/ArrowUpRight.svg" alt="Icone seta">
+                </figure>
+            </a>
+
+            <a href="#">
+                <figure class="link">
+                    <img src="assets/icons/EnvelopeSimple.svg" alt="Logo Envelope">
+                    <p>Linkedin</p>
+                    <img src="assets/icons/ArrowUpRight.svg" alt="Icone seta">
+                </figure>
+            </a>
+        </div>
+    </section>
 </body>
 </html>
