Estilizando a seção contact

--- a/index.html
+++ b/index.html
@@ -177,33 +177,44 @@
 
         <div class="links">
             <a href="#">
-                <figure class="link">
-                    <img src="assets/icons/LinkedinLogo.svg" alt="Logo Linkedin">
-                    <p>Linkedin</p>
+                <figure div="Linkedin" class="link">
+                    <div class="social">
+                        <img src="assets/icons/LinkedinLogo.svg" alt="Logo Linkedin">
+                        <p>Linkedin</p>  
+                    </div>
+
                     <img src="assets/icons/ArrowUpRight.svg" alt="Icone seta">
                 </figure>
             </a>
 
             <a href="#">
-                <figure class="link">
-                    <img src="assets/icons/InstagramLogo.svg" alt="Logo Instagram">
-                    <p>Instagram</p>
+                <figure id="Instagram" class="link">
+                    <div class="social">
+                        <img src="assets/icons/InstagramLogo.svg" alt="Logo Instagram">
+                        <p>Instagram</p>
+                    </div>
+
                     <img src="assets/icons/ArrowUpRight.svg" alt="Icone seta">
                 </figure>
             </a>
 
             <a href="#">
-                <figure class="link">
-                    <img src="assets/icons/GithubLogo.svg" alt="Logo Github">
-                    <p>Linkedin</p>
+                <figure id="Github" class="link">
+                    <div class="social">
+                        <img src="assets/icons/GithubLogo.svg" alt="Logo Github">
+                        <p>Github</p>
+                    </div>
+
                     <img src="assets/icons/ArrowUpRight.svg" alt="Icone seta">
                 </figure>
             </a>
 
             <a href="#">
-                <figure class="link">
-                    <img src="assets/icons/EnvelopeSimple.svg" alt="Logo Envelope">
-                    <p>Linkedin</p>
+                <figure id="E-mail" class="link">
+                    <div class="social">
+                        <img src="assets/icons/EnvelopeSimple.svg" alt="Logo Envelope">
+                        <p>E-mail</p>
+                    </div>
                     <img src="assets/icons/ArrowUpRight.svg" alt="Icone seta">
                 </figure>
             </a>
