Corrigindo Martina Santos icon

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="info">
             <header>
                 <div class="avatar">
-                    <img src="assets/martina-santos.png" alt="Perfil de Martina Santos">
+                    <img src="./assets/martina-santos.png" alt="Perfil de Martina Santos">
                 </div>
 
                 <div>
